@@ -97,6 +97,7 @@ extern "C" {
 typedef struct CexpContextRec_ {
 	CexpContext			next;
 	jmp_buf				jbuf;		/* for setjmp/longjmp */
+	char                *prompt;
 #ifdef HAVE_TECLA
 	GetLine				*gl;		/* line editor context; this could actually be one context per thread */
 #endif
